--- a/index.html
+++ b/index.html
@@ -19,5 +19,25 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="container-fluid">
+            <h1>
+                Bienvenue sur mon portfolio
+            </h1>
+            <p>
+                Découvrez mes projets, compétences et expériences.
+            </p>
+            <p>
+                N'hésitez pas à me contacter pour toute collaboration ou opportunité.
+            </p>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Mon Portfolio. Tous droits réservés.</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
